--- a/test/index.html
+++ b/test/index.html
@@ -4,6 +4,7 @@
     <title>Tower Element</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="../build/build.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
   </head>
   <body>
     <div id="mocha"></div>
