--- a/test/index.html
+++ b/test/index.html
@@ -7,6 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
   </head>
   <body>
+    <background src="image"></background>
     <div id="mocha"></div>
     <script src="../build/build.js"></script>
     <script>require('visionmedia-mocha')</script>
