--- a/examples/index.html
+++ b/examples/index.html
@@ -30,7 +30,7 @@
 
     element('background')
       .attr('color')
-      .template('<div data-style="color: color">Hello World</div>');
+      .template('<div data-style="color: color">Hello World</div>', true);
 
     var data = {
       myColor: 'red'
