--- a/examples/index.html
+++ b/examples/index.html
@@ -29,7 +29,10 @@
     var element = require('tower-element');
     require('tower-style-directive');
     require('tower-text-directive');
-    require('tower-event-directive')();
+    var event = require('tower-event-directive');
+    event();
+    // XXX: should be able to add custom events to dom nodes
+    // event('next');
 
     element('banner')
       .attr('color')
@@ -53,6 +56,7 @@
 
     function next() {
       console.log('next!');
+      console.log(this);
     }
 
     var data = {
