--- a/examples/index.html
+++ b/examples/index.html
@@ -20,7 +20,7 @@
     }
   </style>
 
-  <banner text="Hello World" color="red"></banner>
+  <banner text="Hello World" data-color="myColor"></banner>
   <pager prevLabel="Previous" nextLabel="Next"></pager>
 
   <script>
@@ -65,6 +65,10 @@
 
     var scope = content('random').init(data);
     template(document.body)(scope);
+
+    setTimeout(function(){
+      scope.set('myColor', 'blue');
+    }, 1000);
   </script>
 </body>
 </html>
